<resources>
    <string name="app_name">Ngaksoro</string>
    <string name="image_content">Image Hanacaraka</string>
    <string name="check_connection">No Internet, Please Check Your Internet Connection !</string>
    <string name="home_title">Aksara Jawa adalah sistem tulisan tradisional untuk bahasa Jawa yang terdiri dari karakter-karakter abugida.\n\nDigunakan sejak zaman kuno di Jawa, aksara ini melambangkan suku kata dan dapat dimodifikasi dengan tanda diakritik.\n\nMeskipun pengaruh modernisasi, Aksara Jawa tetap dilestarikan dalam seni, sastra, dan kegiatan budaya Jawa untuk mempertahankan warisan budaya yang kaya.</string>
    <string name="modul_belajar">Modul Belajar</string>
    <string name="modul_belajar_2">new syllabus</string>
    <string name="test_quiz">Tes/kuis</string>
    <string name="membaca">Membaca</string>
    <string name="menulis">Menulis</string>

    <string name="tulis_aksara">Tulis Aksara</string>
    <string name="hapus">Hapus</string>
    <string name="cek">Cek</string>

    <string name="title_membaca_activity">Pilih jawaban yang tepat</string>
    <string name="subtitle_membaca_activity">Bagaimana cara membaca huruf dibawah ini</string>


    <!--    Text Tittle Activity -->
    <string name="home_activity">Home</string>
    <string name="belajar_activity">Modul Belajar</string>
    <string name="menulis_kuis_activity">Kuis Menulis</string>
    <string name="membaca_kuis_activity">Kuis Membaca</string>

    <!--    TEXT Button -->
    <string name="select_soal">Pilih Dahulu</string>
    <!--     TEXT HANACARAKA -->
    <string name="ha">Ha</string>
    <string name="na">Na</string>
    <string name="ca">Ca</string>
    <string name="ra">Ra</string>
    <string name="ka">Ka</string>
    <string name="da">Da</string>
    <string name="ta">Ta</string>
    <string name="sa">Sa</string>
    <string name="wa">Wa</string>
    <string name="la">La</string>
    <string name="pa">Pa</string>
    <string name="dha">Dha</string>
    <string name="ja">Ja</string>
    <string name="ya">Ya</string>
    <string name="nya">Nya</string>
    <string name="ma">Ma</string>
    <string name="ga">Ga</string>
    <string name="ba">Ba</string>
    <string name="tha">Tha</string>
    <string name="nga">Nga</string>

</resources>